package edu.fiuba.algo3.modelo;

public class Africa extends Continente{
    public Africa(String unNombre) {
        super(unNombre);
    }

    int cantidadEjercitosExtra() {
        return 3;
    }
}
