package edu.fiuba.algo3.modelo;

public class AmericaDelNorte extends Continente {
    public AmericaDelNorte(String unNombre) {
        super(unNombre);
    }
    public int cantidadEjercitosExtra(){
        return 5;
    }
}
