package edu.fiuba.algo3.modelo;

public class AmericaDelSur extends Continente{
    public AmericaDelSur(String unNombre) {
        super(unNombre);
    }
    public int cantidadEjercitosExtra(){
        return 3;
    }
}
