package edu.fiuba.algo3.modelo;

public class Asia extends Continente{
    public Asia(String unNombre) {
        super(unNombre);
    }
    public int cantidadEjercitosExtra(){
        return 7;
    }
}
