package edu.fiuba.algo3.modelo;

public class Europa extends Continente{
    public Europa(String unNombre) {
        super(unNombre);
    }
    public int cantidadEjercitosExtra(){
        return 5;
    }
}
