package edu.fiuba.algo3.modelo;

public class Oceania extends Continente{
    public Oceania(String unNombre) {
        super(unNombre);
    }
    public int cantidadEjercitosExtra(){
        return 2;
    }
}
